# rusty-containers

./: .editorconfig  .gitignore  Cargo.toml  Docker-compose.yml
deploy/k8s/base/: kustomization.yaml
deploy/k8s/base/simple-api/: config.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/k8s/base/simple-worker/: config.yaml  cronjob.yaml  kustomization.yaml
deploy/k8s/overlays/development/: kustomization.yaml
deploy/k8s/overlays/development/helm/: metrics-server-values.yaml  traefik-values.yaml
deploy/k8s/overlays/development/ingress/: simple-api.yaml
scripts/: build-images.sh  k8s-create.sh  k8s-delete.sh
simple-api/: .env  Cargo.toml  Dockerfile
simple-api/src/: main.rs
simple-worker/: Cargo.toml  Dockerfile
simple-worker/src/: main.rs
