[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-gzip", "cookies", "http2", "unicode", "compat"] }
anyhow = "1.0"
clap = "2"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
panic = 'abort'
