[package]
name = "simple-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = "2"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
panic = 'abort'
